Fix layout bug

--- a/src/component/CurrentWeatherMetricsCard/CurrentWeatherMetricsCard.css
+++ b/src/component/CurrentWeatherMetricsCard/CurrentWeatherMetricsCard.css
@@ -4,4 +4,5 @@
 
 .weather-stats-container {
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
